--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
      "short_name": "To do List con voz",
-     "name": "PIP-Photo",
+     "name": "Lista de tareas",
      "description": "Lectura de notas por medio de voz",
      "icons": [
         {
@@ -26,8 +26,8 @@
      ],
      "start_url": "./index.html",
      "orientation": "portrait",
-     "background_color": "#3367D6",
+     "background_color": "#FFF",
      "display": "standalone",
      "scope": "/",
-     "theme_color": "#3367D6"
+     "theme_color": "#FFF"
 }
